# notype

./: .gitignore  Cargo.toml  LICENSE  Readme.md  config.example.toml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/notype-audio/: Cargo.toml
crates/notype-audio/src/: device.rs  encoder.rs  lib.rs  recorder.rs
crates/notype-config/: Cargo.toml
crates/notype-config/src/: history.rs  lib.rs  stats.rs
crates/notype-input/: Cargo.toml
crates/notype-input/src/: lib.rs
crates/notype-llm/: Cargo.toml
crates/notype-llm/src/: apple.rs  doubao.rs  gemini.rs  gpt_realtime.rs  lib.rs  mimo.rs  prompt.rs  qwen.rs  volcengine.rs  whisper.rs
scripts/: doubao_asr_api_gateway.py  doubao_realtime_bridge.py
src/: bubble.html  bubble.ts  main.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: bubble.rs  lib.rs  main.rs  platform.rs  tray.rs
