[workspace]
members = [
    "src-tauri",
    "crates/notype-audio",
    "crates/notype-llm",
    "crates/notype-input",
    "crates/notype-config",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["yiming"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
