[package]
name = "notype"
description = "A lightweight cross-platform voice input tool powered by multimodal LLMs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "notype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

notype-audio = { path = "../crates/notype-audio" }
notype-llm = { path = "../crates/notype-llm" }
notype-input = { path = "../crates/notype-input" }
notype-config = { path = "../crates/notype-config" }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"

