[package]
name = "notype-config"
description = "Configuration management for NoType"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
