[package]
name = "notype-llm"
description = "LLM API client for voice recognition (Gemini, Qwen)"
version.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
